syntax = "proto3";

package order.v1;

option go_package = "github.com/jcmexdev/ecommerce-sagas/internal/genproto/order/v1;orderv1";

// OrderItem represents a single product type within an order.
message OrderItem {
  // Unique identifier for the product.
  string product_id = 1;
  // Number of units requested.
  int32 quantity = 2;
  // Price per unit (simplified as double for practice).
  double unit_price = 3;
}

// Status defines the high-level lifecycle of an order from the user's perspective.
enum Status {
  // Order has been created but not yet fully processed.
  PENDING = 0;
  // Order was successfully paid and stock was reserved.
  CONFIRMED = 1;
  // Order failed at some point and compensations were executed.
  CANCELLED = 2;
}

// Order represents the full state of a customer's purchase.
message OrderInfo {
  // Unique identifier generated by the Order Service.
  string id = 1;
  // Reference to the customer who placed the order.
  string customer_id = 2;
  // List of products included in this order.
  repeated OrderItem items = 3;
  // Current high-level status of the order.
  Status status = 4;
  // Total cost calculated as sum of (quantity * unit_price).
  double total_amount = 5;
}

// CreateOrderRequest contains the necessary information to start a purchase.
message CreateOrderRequest {
  string             customer_id = 1;
  repeated OrderItem items       = 2;
}

// CreateOrderResponse returns the newly created order in PENDING state.
message CreateOrderResponse {
  OrderInfo order = 1;
}

// GetOrderRequest is used to look up an order by its ID.
message GetOrderRequest {
  string id = 1;
}

// GetOrderResponse returns the found order details.
message GetOrderResponse {
  OrderInfo order = 1;
}

message UpdateOrderStatusRequest {
  string id     = 1;
  Status status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
}

// Order is the entry point for the e-commerce system.
// It acts as the Saga Orchestrator, coordinating Payment and Inventory.
service Order {
  // CreateOrder initiates a new purchase flow.
  // It persists the order as PENDING and starts the orchestration saga.
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);

  // GetOrder retrieves the current state of an order by its ID.
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);

  // UpdateOrderStatus update the order status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}